cmake_minimum_required(VERSION 3.12)
project(05_opencv)
set("OpenCV_DIR" "C:/opencv/build")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories("images")
add_executable(05_opencv main.cpp)
add_definitions("-DPATH_TO_IMG=\"${CMAKE_SOURCE_DIR}/images/img.png\"")
target_link_libraries(05_opencv ${OpenCV_LIBS})