cmake_minimum_required(VERSION 3.12)
project(06_opencv_2)
set("OpenCV_DIR" "C:/opencv/build")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories("images")
add_executable(06_opencv_2 main.cpp)
add_definitions("-DPATH_TO_IMG_SRC=\"${CMAKE_SOURCE_DIR}/images/img1.jpg\"")
add_definitions("-DPATH_TO_IMG_DST=\"${CMAKE_SOURCE_DIR}/images/img2.jpg\"")
target_link_libraries(06_opencv_2 ${OpenCV_LIBS})